

Name: Segue ChangeLog


v. 1.3.0 (the future)
----------------------------------------------------
		
	* Change: When Changing to a differnt active user as admin, you are now kept on the same page. (Adam Franco)
		
	* New feature: Segue can now be configured to restrict users to given sites based on the virtual host asked for. Each vhost must be set up on the webserver as well as in the Segue config. (Gabe Schine)
		
	* Bug Fix: stripped html tags from of first 25 characters of content that is the topic of discussion and is displayed in discussion/assessment participation summary. (Alex Chapin)
		
	* Change: Changed the way semesters are defined and handled. Segue can now be configured to have as few or many semesters as desired, each with custom start/end days. (Adam Franco)
		
	**** IMPORTANT *** Change: The semester-handling changes involve new config options if upgrading from Segue 1.2.x or earlier. Change also necessitates a database table change if semesters other than w,s,l,f are used. (Adam Franco)
		
	* Bug Fix: Classes are now ordered by year, semester, and code on the default page. (Adam Franco)
		
	* Bug Fix: sites.php now queries the new (as of a year ago) tables when checking for the type of a site. (Adam Franco)
		
	* Bug Fix: Rating can now be set to zero. The default, NULL, -- set by an empty field -- is "no rating". (Adam Franco)
		
	* Bug Fix: Public Site Listing now prints next/previous links to additional pages. (Adam Franco)
		
	* New feature: Added error-printing functions to print out backtraces neatly. (Adam Franco)
		