@@ -5,6 +5,9 @@
 	li {padding-bottom: 3px;}
 	</style><div style="font-family: Verdana; font-size: 12px;"><h1>Segue ChangeLog</h1><h2>Version 1.3.0</h2><h3>the future</h3><ul>
 		<li/> Change:  
+			The 'Site not availible' error is now more informative.
+		 (<i>Adam Franco</i>)
+		<li/> Change:  
 			When Changing to a differnt active user as admin, you are now kept on
 			the same page.
 		 (<i>Adam Franco</i>)
