@@ -3,6 +3,9 @@
 <changelog name="Segue ChangeLog">
 	<version number="1.3.0" date="the future">
 		<change author='adam'>
+			The 'Site not availible' error is now more informative.
+		</change>
+		<change author='adam'>
 			When Changing to a differnt active user as admin, you are now kept on
 			the same page.
 		</change>
